--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,10 @@
     <string name="settings_player_mpv_experimental">MPV (Experimental)</string>
     <string name="settings_player_vlc">VLC</string>
 
+    <string name="settings_source">Source</string>
+    <string name="settings_source_collaps">Collaps</string>
+    <string name="settings_source_torrents">Torrents</string>
+
     <string name="torrserver_status_label">Status: %1$s</string>
     <string name="torrserver_status_running">Server is running</string>
     <string name="torrserver_status_stopped">Server is stopped</string>
@@ -169,6 +173,7 @@
     <string name="select_playback_speed">Select playback speed</string>
     <string name="select_audio_track">Select audio track</string>
     <string name="select_subtitle_track">Select subtitle track</string>
+    <string name="select_video_quality">Select quality</string>
     <string name="none">None</string>
 
     <string name="player_trickplay">Trickplay preview</string>
