--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -45,7 +45,8 @@
 
     <string-array name="changes_history">
         <item>0.1.0-pre1||- Первый пререлиз\n- Добавлены плееры: ExoPlayer и libMPV\n- Добавлен Torrserver и мелкие исправления.</item>
-       <item>0.1.0-pre2||- Добавлен плеер Collaps и версия для телевизоров.</item>
+        <item>0.1.0-pre2||- Добавлен плеер Collaps и версия для телевизоров.</item>
+        <item>0.1.0-pre3||- Баг фиксы и переписан плеер для телевизоров.</item>
     </string-array>
 
     <string name="credits_loading">Загрузка…</string>
