--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -182,6 +182,8 @@
 
     <string name="details_watched_count">Watched series: %1$d</string>
     <string name="details_last_watched">Stopped at: S%1$02dE%2$02d%3$s</string>
+    <string name="details_watch_progress_minutes">Stopped at: %1$d/%2$d min%3$s</string>
+    <string name="details_watch_progress_position">Stopped at: %1$d min</string>
 
     <string name="picture_in_picture">Picture in picture</string>
     <string name="select_playback_speed">Select playback speed</string>
